--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
         "default_title": "QuickCSV"
     },
     "icons": {
-        "48": "assets/icon-48.png",
-        "128": "assets/icon-128.png"
+        "48": "assets/48.png",
+        "128": "assets/128.png"
     },
     "permissions": []
 }
