--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
         "default_title": "QuickCSV"
     },
     "icons": {
-        "48": "./48.png",
+        "48": "./48-01.png",
         "128": "./128.png"
     },
     "permissions": []
