--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
         "default_title": "QuickCSV"
     },
     "icons": {
-        "48": "./48-01.png",
-        "128": "./128.png"
+        "48": "./48x48.png",
+        "128": "./128x128.png"
     },
     "permissions": []
 }
